new changes to dashboard and savings

--- a/dashboard.html
+++ b/dashboard.html
@@ -45,7 +45,7 @@
                             <div class="bankCard">
                                 <div class="bankCardContent">
                                     <div class="bankNumber">
-                                        <h3>3594 1899 3455 1000</h3>    
+                                        <h3>3594 1899 3455 1000</h3>
                                     </div>
                                     <div class="otherDetails">
                                         <p class="user_name">IBRAHIM AZAR</p>
@@ -58,7 +58,7 @@
                             <div class="dashboardLeftdownleft">
                                 <div class="incomeAndOutGoing">
                                     <div class="monthAndDate">
-                                        <h3>OCTOBER</h3 >
+                                        <h3>OCTOBER</h3>
                                         <p>2025</p>
                                     </div>
                                     <div class="incomeAndOutGoingBox">
@@ -90,58 +90,8 @@
                                             <p class="savingsSeeAll">See All</p>
                                         </div>
                                         <div class="savingsLeftDown">
-                                            <div class="savingsLeftDownTop">
-                                                <div class="savingBoxes savingBoxes1">
-                                                    <div class="savingBoxesContent1 savingBoxesContent">
-                                                        <div class="savingsNameAndArrow">
-                                                            <p class="savingsName">Iphone 13 pro</p>
-                                                            <img src="assets/Expand_right.svg" alt="">
-                                                        </div>
-                                                        <h2 class="totalSaved"><span>₹</span>70<span>K</span></h2>
-                                                    </div>
-                                                    <div class="savingBoxesProgressBar1 savingBoxesProgressBar">
-                                                        <div class="progress"></div>
-                                                    </div>
-                                                </div>
-                                                <div class="savingBoxes savingBoxes2">
-                                                    <div class="savingBoxesContent1 savingBoxesContent">
-                                                        <div class="savingsNameAndArrow">
-                                                            <p class="savingsName">Lamborgini</p>
-                                                            <img src="assets/Expand_right.svg" alt="">
-                                                        </div>
-                                                        <h2 class="totalSaved"><span>₹</span>7<span>Cr</span></h2>
-                                                    </div>
-                                                    <div class="savingBoxesProgressBar1 savingBoxesProgressBar">
-                                                        <div class="progress"></div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="savingsLeftDownBottom">
-                                                <div class="savingBoxes savingBoxes3">
-                                                    <div class="savingBoxesContent1 savingBoxesContent">
-                                                        <div class="savingsNameAndArrow">
-                                                            <p class="savingsName">House</p>
-                                                            <img src="assets/Expand_right.svg" alt="">
-                                                        </div>
-                                                        <h2 class="totalSaved"><span>₹</span>50<span>L</span></h2>
-                                                    </div>
-                                                    <div class="savingBoxesProgressBar1 savingBoxesProgressBar">
-                                                        <div class="progress"></div>
-                                                    </div>
-                                                </div>
-                                                <div class="savingBoxes savingBoxes4">
-                                                    <div class="savingBoxesContent1 savingBoxesContent">
-                                                        <div class="savingsNameAndArrow">
-                                                            <p class="savingsName">PS 5</p>
-                                                            <img src="assets/Expand_right.svg" alt="">
-                                                        </div>
-                                                        <h2 class="totalSaved"><span>₹</span>40<span>K</span></h2>
-                                                    </div>
-                                                    <div class="savingBoxesProgressBar1 savingBoxesProgressBar">
-                                                        <div class="progress"></div>
-                                                    </div>
-                                                </div>
-                                            </div>
+                                            <div class="savingsLeftDownUp"></div>
+                                            <div class="savingsLeftDownDown"></div>
                                         </div>
                                     </div>
                                     <div class="savingsRight">
@@ -161,36 +111,36 @@
                                     <div class="peopleRight">
                                         <p class="no_people_added">No People Added</p>
                                         <div class="peopleCards peopleCards1">
-                                                <div class="peoplepfp">
-                                                </div>
-                                                <div class="peopleOtherDetails">
-                                                    <h3 class="peopleName">Abhijit Karmakar</h3>
-                                                    <p class="peopleRelation">Friend</p>
-                                                </div>
+                                            <div class="peoplepfp">
+                                            </div>
+                                            <div class="peopleOtherDetails">
+                                                <h3 class="peopleName">Abhijit Karmakar</h3>
+                                                <p class="peopleRelation">Friend</p>
+                                            </div>
                                         </div>
                                         <div class="peopleCards peopleCards2">
-                                                <div class="peoplepfp">
-                                                </div>
-                                                <div class="peopleOtherDetails">
-                                                    <h3 class="peopleName">Disha Saha</h3>
-                                                    <p class="peopleRelation">Friend</p>
-                                                </div>
+                                            <div class="peoplepfp">
+                                            </div>
+                                            <div class="peopleOtherDetails">
+                                                <h3 class="peopleName">Disha Saha</h3>
+                                                <p class="peopleRelation">Friend</p>
+                                            </div>
                                         </div>
                                         <div class="peopleCards peopleCards3">
-                                                <div class="peoplepfp">
-                                                </div>
-                                                <div class="peopleOtherDetails">
-                                                    <h3 class="peopleName">Manju Dhara</h3>
-                                                    <p class="peopleRelation">Friend</p>
-                                                </div>
+                                            <div class="peoplepfp">
+                                            </div>
+                                            <div class="peopleOtherDetails">
+                                                <h3 class="peopleName">Manju Dhara</h3>
+                                                <p class="peopleRelation">Friend</p>
+                                            </div>
                                         </div>
                                         <div class="peopleCards peopleCards4">
-                                                <div class="peoplepfp">
-                                                </div>
-                                                <div class="peopleOtherDetails">
-                                                    <h3 class="peopleName">Bishakha Dutta</h3>
-                                                    <p class="peopleRelation">Friend</p>
-                                                </div>
+                                            <div class="peoplepfp">
+                                            </div>
+                                            <div class="peopleOtherDetails">
+                                                <h3 class="peopleName">Bishakha Dutta</h3>
+                                                <p class="peopleRelation">Friend</p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -202,21 +152,6 @@
                             <h3>Transactions</h3>
                             <div class="transaction_slides">
                                 <p class="no_transaction">No Transactions</p>
-                                <!-- <div class="slides">
-                                    <div class="slidesLeft">
-                                        <div class="slidesLeftName">
-                                            <h1 class="transaction_name">Dribble</h1>
-                                            <p class="transaction_type">Subscription Fees</p>
-                                        </div>
-                                        <div class="transactionAmount">
-                                            <h2>- ₹<span class="amount">500</span></h2>
-                                        </div>
-                                    </div>
-                                    <div class="slidesRight">
-                                        <p class="transactions_date">13th February 2025</p>
-                                        <p class="transactions_description">No Description</p>
-                                    </div>
-                                </div> -->
                             </div>
                         </div>
                     </div>
