working on payment page

--- a/dashboard.html
+++ b/dashboard.html
@@ -160,7 +160,7 @@
                     <div class="dockbox">
                         <a href="dashboard.html"><i class="ri-home-fill"></i></a>
                         <a href="savings.html"><i class="ri-wallet-fill"></i></a>
-                        <a href="#"><i class="ri-hand-coin-fill"></i></a>
+                        <a href="paymentPage.html"><i class="ri-hand-coin-fill"></i></a>
                         <a href="#"><i class="ri-team-fill"></i></a>
                         <a href="#"><i class="ri-history-fill"></i></a>
                     </div>
@@ -168,7 +168,7 @@
             </div>
         </div>
     </main>
-
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="dashboard.js"></script>
 </body>
