--- a/savings.html
+++ b/savings.html
@@ -56,7 +56,37 @@
                         </div>
                         <a href="#" class="signUpSubmitBtn disabled">SAVE</a>
                     </div>
-                </div>
+
+                    <div class="details_box" style="display: none;">
+                        <a href="#" class="details_back_btn"><i class="ri-arrow-left-s-line"></i> Back</a>
+                        <h1 class="details_name">Buy a New Laptop</h1>
+                        
+                        <div class="details_progress_info">
+                            <div classs="details_progress_text">
+                                <h3 class="details_saved_amount"><span>₹</span>50K</h3>
+                                <p class="details_target_amount">of <span>₹</span>1L</p>
+                            </div>
+                            <p class="details_percentage">50%</p>
+                        </div>
+                        <div class="details_progress_bar">
+                            <div class="details_progress_fill" style="width: 50%;"></div>
+                        </div>
+
+                        <p class="details_description_title">Description</p>
+                        <div class="details_description_box">
+                            <p class="details_description">
+                                Need to save up for the new MacBook Pro for work. 
+                                Trying to put aside 10k every month.
+                            </p>
+                        </div>
+
+                        <div class="details_actions">
+                            <a href="#" class="details_deposit_btn">Make a Deposit</a>
+                            <a href="#" class="details_delete_btn">Delete Saving</a>
+                        </div>
+                        <p class="details_id">#sv_12345</p>
+                    </div>
+                    </div>
                 <div class="right">
                     <p class="no_savings"
                         style="display: none; color: white; text-align: center; margin-top: 2vw; font-size: 1.2vw;">
