payment page user info update

--- a/paymentPage.html
+++ b/paymentPage.html
@@ -19,12 +19,52 @@
                             <div class="headingUserInfo">
                                 <h1>User Info</h1>
                             </div>
+
                             <div class="userProfilePicandOtherInfo">
-                                <div class="otherInfo">
-                                    <p>Name</p>
+
+                                <div class="profileInfo">
                                     <h1 class="userName">Manju Dhara</h1>
+
+                                    <div class="profileDetails">
+
+                                        <div class="profileDetailItem">
+                                            <i class="ri-user-line"></i>
+                                            <p>User ID</p>
+                                            <h3>#1001</h3>
+                                        </div>
+                                        <div class="profileDetailItem">
+                                            <i class="ri-phone-fill"></i>
+                                            <p>Phone Number</p>
+                                            <h3>+91 7679048065</h3>
+                                        </div>
+                                        <div class="profileDetailItem">
+                                            <i class="ri-calendar-line"></i>
+                                            <p>Age</p>
+                                            <h3>35</h3>
+                                        </div>
+                                        <div class="profileDetailItem">
+                                            <i class="ri-women-line"></i>
+                                            <p>Gender</p>
+                                            <h3>Female</h3>
+                                        </div>
+
+                                    </div>
                                 </div>
-                                <div class="profilePic"></div>
+
+                                <div class="profileAvatar">
+                                    <div class="profilePic"></div>
+                                    <div class="profileActions">
+                                        <a href="#" class="profile-btn edit-btn">
+                                            <i class="ri-pencil-fill"></i>
+                                            <span>Edit Profile</span>
+                                        </a>
+                                        <a href="#" class="profile-btn password-btn">
+                                            <i class="ri-lock-password-fill"></i>
+                                            <span>Change Password</span>
+                                        </a>
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                         <div class="leftDownPaymentOptions"></div>
