payment options added

--- a/paymentPage.html
+++ b/paymentPage.html
@@ -67,7 +67,40 @@
 
                             </div>
                         </div>
-                        <div class="leftDownPaymentOptions"></div>
+                        <div class="leftDownPaymentOptions">
+                            <div class="payment-options-grid">
+                                <a href="#" class="payment-option-btn">
+                                    <div class="payment-option-icon po-deposit">
+                                        <i class="ri-arrow-down-circle-line"></i>
+                                        <p>Deposit</p>
+                                    </div>
+                                </a>
+                                <a href="#" class="payment-option-btn">
+                                    <div class="payment-option-icon po-withdraw">
+                                        <i class="ri-arrow-up-circle-line"></i>
+                                        <p>Withdraw</p>
+                                    </div>
+                                </a>
+                                <a href="#" class="payment-option-btn">
+                                    <div class="payment-option-icon po-pay">
+                                        <i class="ri-team-fill"></i>
+                                        <p>Pay a Friend</p>
+                                    </div>
+                                </a>
+                                <a href="#" class="payment-option-btn">
+                                    <div class="payment-option-icon po-info">
+                                        <i class="ri-search-eye-line"></i>
+                                        <p>Check Balance</p>
+                                    </div>
+                                </a>
+                                <a href="#" class="payment-option-btn">
+                                    <div class="payment-option-icon po-saving">
+                                        <i class="ri-add-circle-line"></i>
+                                        <p>Make a saving deposit</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                     <div class="right">
                         <div class="paymentWindow"></div>
